# beryl

./: .clang-format  .clang-tidy  .gitignore  .replit  LICENSE  Makefile  README.md  beryl  beryl.cpp  compile_beryl.sh  main.cpp  meson.build  mineroil.cpp  setup.sh  test.by  test_llvm  test_llvm.cpp
.cache/clangd/index/: error.hpp.0BC9986F93A681DA.idx  main.cpp.A81E824796062FA1.idx  parse_json_params.cpp.59E9A779FEA3017A.idx  parse_json_params.hpp.0F60EC049483F955.idx
__bervenv__/syspacks/: packages.txt
be1/biir-codegen/: gen.cpp  gen.hpp
be1/lexer/: lex.cpp  lex.hpp
be1/parser/: parse.cpp  parse.hpp  write_to_gv.cpp
beryl/: .gitignore  LICENSE  README.md  beryl.cpp  meson.build
beryl/be1/lexer/: lex.hpp
beryl/be1/parser/: parse.cpp  parse.hpp
beryl/clparser/: build.cpp  clparser.hpp  print.cpp  run.cpp  venv.cpp
beryl/lang-tests/test2/: test.by
beryl/start/: start.c
beryl/struct-opt/: struct_opt.cpp
beryl/unit-tests/: structopt1.cpp
beryl/utils/: arena.hpp  error.cpp  parse_json_params.cpp  timer.cpp  timer.hpp
clparser/: build.cpp  clparser.hpp  print.cpp  run.cpp  venv.cpp
compiler/: meson.build
compiler/be1/lexer/: lex.cpp  lex.hpp
compiler/be1/parser/: parse.cpp  parse.hpp
compiler/clparser/: build.cpp
compiler/utils/: arena.hpp
lang-tests/test1/: test.by
lang-tests/test1/__bervenv__/syspacks/: packages.json
linux/: Makefile  beryl  install-system-wide  minoil.py
linux-specific/: Makefile  minoil.py
macOS-apple-clang/: Makefile
macOS-homebrew-clang/: Makefile  beryl
mineraloil/: __init__.py  go.mod  install_minoil.sh  main.go  minoil.py
mineraloil-final/: main.go
mineraloil/cmd/: install.go  list.go  query.go  root.go  uninstall.go
mineraloil/helpers/: ask.go  find_bervenv.go
start/: start.c
struct-opt/: struct_opt.cpp  struct_opt.hpp
tests/lang-tests/test1/: test.by
tests/start-tests/: beryl_test  logic.c
tests/struct-opt-tests/: test1  test1.cpp
tests/test1/: test.by
unit-tests/: import-test1.cpp
utils/: arena.hpp  arena_allocator.hpp  error.cpp  error.hpp  parse_json_params.hpp
